FIX: [Bug tracker ID 0000625] Change z-index of header to ensure it displays above geographic search map [t14904]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10558 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -139,7 +139,7 @@ h2#CollectionsPanelHeader {display:none;}
     }
 
 /* Slim header with fixed top bar */
-div#Header.SlimHeaderFixedPosition { width: 100%; position:fixed; top: 0px; z-index: 100; }
+div#Header.SlimHeaderFixedPosition { width: 100%; position:fixed; top: 0px; z-index: 1100; }
 div#Header.SlimHeaderFixedPosition #HeaderNav1 { margin-right: 25px; }
 div#Header.SlimHeaderFixedPosition #HeaderNav2 li:last-child { margin-right: 40px; }
 div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 100px; }
